NH-94433: migrate all build.gradle to Kotlin DSL